@@ -10,6 +10,7 @@ Enhancements:
 - #7190 Maintenance license serial key support
 - #7193 Support for maintenance licenses in China
 - #7197 Special contributor mentions on the about screen
+- #7203 License registration for Business edition
 
 1.14.4
 ======
